app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import "bootstrap-sprockets";
@import "bootstrap";

// General styles
h1, h2, h3, h4, h5, h6, p, td {
  text-align: center;
  color: white;
}

a {
  color: #abf;
}

a:hover, a:focus {
  color: #89d;
}

.clearfix:after {
  content: "";
  display: block;
  clear: both;
}

body {
  background-image: image-url("fire.jpg");
  background-size: cover;
}

body.backbone {
  background-image: image-url("spider.jpg");
}

// PhotoLarge styles
div.photo-large-container {
  display: block;
  margin: 0 auto;
}

// Form styles
form .tags a.tag-link:hover {
  text-decoration: line-through;
}

ul.form-errors {
  padding-left: 0;
}

ul.form-errors > li {
  color: #800;
  font-size: 20;
  font-style: oblique;
  list-style: none;
  text-align: center;
}

.form-horizontal > div, .form-horizontal > label {
  margin-bottom: 5px;
}

.form-container {
  border: 2px solid;
  border-radius: 25px;
  padding: 0;
}

.log-form-container {
  margin-top: 100px;
}

.form-container > h1 {
  margin-top: 0;
}

.tags-container {
  border: 0;
  margin: 0;
  -webkit-box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.075);
  box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.075);
}

// UserShow styles
.clearfix:not(:first-of-type) .follow-container {
  display: none;
}

// AlbumsIndex / PhotosIndex styles
a.album-link {
  text-decoration: none;
}

.album-placeholder {
  padding: 42% 0;
  text-align: center;
  font-size: 16;
  color: black;
  background: radial-gradient(circle, white, #888);
  width: 100%;
  height: 200px;
  border: 2px solid white;
}

.photos-index-container, .albums-index-container {
  width: 100%;
}

div.grid-sizer {
  width: 25%;
}

div.grid-item {
  float: left;
  position: relative;
  width: 25%;
}

div.grid-item img {
  display: block;
  max-width: 100%;
  border: 2px solid transparent;
}

div.grid-item p, div.grid-item > span {
  position: absolute;
  display: none;
}

div.grid-item:hover p {
  display: block;
  bottom: 0;
  left: 25px;
}

div.grid-item:hover > span {
  display: block;
  right: 2px;
  top: 2px;
}

div.grid-item:hover > span button {
  border-radius: 0 0 0 4px;
}

div.grid-item:hover > span .badge {
  background: none;
}

div.grid-item:hover .badge, div.grid-item:hover p {
  color: white;
  font-size: 12;
  text-shadow: 0 0 0.1em black, 0 0 0.2em black;
}

// Nav styles
.guest-login {
  color: #f55;
  background-color: transparent;
  padding: 15px;
  line-height: 20px;
  border: 0;
  font-weight: 500;
}

.guest-login:hover {
  color: #ff9;
}

.navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-brand {
  color: #f55;
}

.navbar-brand {
  font-weight: 500;
}

.navbar-inverse .navbar-nav > li > a:hover,
.navbar-inverse .navbar-nav > li > a:focus,
.navbar-inverse .navbar-brand:hover,
.navbar-inverse .navbar-brand:focus,
.navbar-inverse .navbar-nav > .open > a,
.navbar-inverse .navbar-nav > .open > a:hover,
.navbar-inverse .navbar-nav > .open > a:focus {
  color: #ff6;
}

.navbar-inverse .navbar-nav > .active > a {
  color: #f97;
}

.navbar-inverse .navbar-nav > .active > a:hover {
  color: #ffa;
}

.dropdown-menu {
  background-color: #222;
}

.dropdown-menu > li > a {
  color: #f55;
}

.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
    color: #ff6;
    background-color: #090909;
}

// UsersIndex styles
td {
  width: 25%;
  height: 50px;
}

#users {
  border: 2px solid;
}

